// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movies component renders correctly Movies error message renders correctly 1`] = `
<React.Fragment>
  <main
    className="container"
  >
    <p
      className="errorMsg"
    >
      Sorry, something went wrong.
      O-ops
    </p>
  </main>
</React.Fragment>
`;

exports[`Movies component renders correctly Movies grid renders correctly 1`] = `
<React.Fragment>
  <main
    className="container gridMovieList"
  >
    <Grid
      movies={
        Array [
          Object {
            "title": "first movie",
          },
          Object {
            "title": "second movie",
          },
        ]
      }
      toggleModal={[Function]}
    />
    <button
      className="toTopBtn"
      onClick={[Function]}
      type="button"
    >
      ↑
    </button>
  </main>
</React.Fragment>
`;

exports[`Movies component renders correctly Movies not found message renders correctly 1`] = `
<React.Fragment>
  <main
    className="container"
  >
    <p
      className="notFound"
    >
      Sorry, no movies found.
    </p>
  </main>
</React.Fragment>
`;

exports[`Movies component renders correctly Movies render modal correctly 1`] = `
<React.Fragment>
  <main
    className="container"
  >
    <p
      className="notFound"
    >
      Sorry, no movies found.
    </p>
  </main>
  <TrailerModal
    isLoading={false}
    toggleModal={[Function]}
    videoSrc=""
  />
</React.Fragment>
`;
